--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
   "author": "Marion",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.4.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "firebase-admin": "^11.11.0",
     "knex": "^3.0.1",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
